// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FieldValueSelectionFilter active - field is global 1`] = `
<EuiPopover
  anchorPosition="downCenter"
  button={
    <EuiFilterButton
      color="text"
      grow={true}
      hasActiveFilters={true}
      iconSide="right"
      iconType="arrowDown"
      onClick={[Function]}
      type="button"
    >
      Tag
    </EuiFilterButton>
  }
  closePopover={[Function]}
  display="inlineBlock"
  hasArrow={true}
  id="field_value_selection_0"
  isOpen={false}
  ownFocus={true}
  panelClassName="euiFilterGroup__popoverPanel"
  panelPaddingSize="none"
  withTitle={false}
>
  <div
    className="euiFilterSelect__items"
  >
    <EuiFilterSelectItem
      checked="on"
      key="2"
      onClick={[Function]}
      onKeyDown={[Function]}
      showIcons={true}
    >
      <div>
        bug
      </div>
    </EuiFilterSelectItem>
    <EuiFilterSelectItem
      key="0"
      onClick={[Function]}
      onKeyDown={[Function]}
      showIcons={true}
    >
      feature
    </EuiFilterSelectItem>
    <EuiFilterSelectItem
      key="1"
      onClick={[Function]}
      onKeyDown={[Function]}
      showIcons={true}
    >
      Text
    </EuiFilterSelectItem>
  </div>
</EuiPopover>
`;

exports[`FieldValueSelectionFilter active - fields in options 1`] = `
<EuiPopover
  anchorPosition="downCenter"
  button={
    <EuiFilterButton
      color="text"
      grow={true}
      hasActiveFilters={true}
      iconSide="right"
      iconType="arrowDown"
      onClick={[Function]}
      type="button"
    >
      Tag
    </EuiFilterButton>
  }
  closePopover={[Function]}
  display="inlineBlock"
  hasArrow={true}
  id="field_value_selection_0"
  isOpen={false}
  ownFocus={true}
  panelClassName="euiFilterGroup__popoverPanel"
  panelPaddingSize="none"
  withTitle={false}
>
  <div
    className="euiFilterSelect__items"
  >
    <EuiFilterSelectItem
      checked="on"
      key="2"
      onClick={[Function]}
      onKeyDown={[Function]}
      showIcons={true}
    >
      <div>
        bug
      </div>
    </EuiFilterSelectItem>
    <EuiFilterSelectItem
      key="0"
      onClick={[Function]}
      onKeyDown={[Function]}
      showIcons={true}
    >
      feature
    </EuiFilterSelectItem>
    <EuiFilterSelectItem
      key="1"
      onClick={[Function]}
      onKeyDown={[Function]}
      showIcons={true}
    >
      Text
    </EuiFilterSelectItem>
  </div>
</EuiPopover>
`;

exports[`FieldValueSelectionFilter inactive - field is global 1`] = `
<EuiPopover
  anchorPosition="downCenter"
  button={
    <EuiFilterButton
      color="text"
      grow={true}
      hasActiveFilters={false}
      iconSide="right"
      iconType="arrowDown"
      onClick={[Function]}
      type="button"
    >
      Tag
    </EuiFilterButton>
  }
  closePopover={[Function]}
  display="inlineBlock"
  hasArrow={true}
  id="field_value_selection_0"
  isOpen={false}
  ownFocus={true}
  panelClassName="euiFilterGroup__popoverPanel"
  panelPaddingSize="none"
  withTitle={false}
>
  <div
    className="euiFilterSelect__items"
  >
    <EuiFilterSelectItem
      key="0"
      onClick={[Function]}
      onKeyDown={[Function]}
      showIcons={true}
    >
      feature
    </EuiFilterSelectItem>
    <EuiFilterSelectItem
      key="1"
      onClick={[Function]}
      onKeyDown={[Function]}
      showIcons={true}
    >
      Text
    </EuiFilterSelectItem>
    <EuiFilterSelectItem
      key="2"
      onClick={[Function]}
      onKeyDown={[Function]}
      showIcons={true}
    >
      <div>
        bug
      </div>
    </EuiFilterSelectItem>
  </div>
</EuiPopover>
`;

exports[`FieldValueSelectionFilter inactive - fields in options 1`] = `
<EuiPopover
  anchorPosition="downCenter"
  button={
    <EuiFilterButton
      color="text"
      grow={true}
      hasActiveFilters={false}
      iconSide="right"
      iconType="arrowDown"
      onClick={[Function]}
      type="button"
    >
      Tag
    </EuiFilterButton>
  }
  closePopover={[Function]}
  display="inlineBlock"
  hasArrow={true}
  id="field_value_selection_0"
  isOpen={false}
  ownFocus={true}
  panelClassName="euiFilterGroup__popoverPanel"
  panelPaddingSize="none"
  withTitle={false}
>
  <div
    className="euiFilterSelect__items"
  >
    <EuiFilterSelectItem
      key="0"
      onClick={[Function]}
      onKeyDown={[Function]}
      showIcons={true}
    >
      feature
    </EuiFilterSelectItem>
    <EuiFilterSelectItem
      key="1"
      onClick={[Function]}
      onKeyDown={[Function]}
      showIcons={true}
    >
      Text
    </EuiFilterSelectItem>
    <EuiFilterSelectItem
      key="2"
      onClick={[Function]}
      onKeyDown={[Function]}
      showIcons={true}
    >
      <div>
        bug
      </div>
    </EuiFilterSelectItem>
  </div>
</EuiPopover>
`;

exports[`FieldValueSelectionFilter render - all configurations 1`] = `
<EuiPopover
  anchorPosition="downCenter"
  button={
    <EuiFilterButton
      color="text"
      grow={true}
      hasActiveFilters={false}
      iconSide="right"
      iconType="arrowDown"
      onClick={[Function]}
      type="button"
    >
      Tag
    </EuiFilterButton>
  }
  closePopover={[Function]}
  display="inlineBlock"
  hasArrow={true}
  id="field_value_selection_0"
  isOpen={false}
  ownFocus={true}
  panelClassName="euiFilterGroup__popoverPanel"
  panelPaddingSize="none"
  withTitle={null}
>
  <div
    className="euiFilterSelect__note"
  >
    <div
      className="euiFilterSelect__noteContent"
    >
      <EuiLoadingChart
        size="m"
      />
      <EuiSpacer
        size="xs"
      />
      <p>
        loading...
      </p>
    </div>
  </div>
</EuiPopover>
`;

exports[`FieldValueSelectionFilter render - fields in options 1`] = `
<EuiPopover
  anchorPosition="downCenter"
  button={
    <EuiFilterButton
      color="text"
      grow={true}
      hasActiveFilters={false}
      iconSide="right"
      iconType="arrowDown"
      onClick={[Function]}
      type="button"
    >
      Tag
    </EuiFilterButton>
  }
  closePopover={[Function]}
  display="inlineBlock"
  hasArrow={true}
  id="field_value_selection_0"
  isOpen={false}
  ownFocus={true}
  panelClassName="euiFilterGroup__popoverPanel"
  panelPaddingSize="none"
  withTitle={false}
>
  <div
    className="euiFilterSelect__items"
  >
    <EuiFilterSelectItem
      key="0"
      onClick={[Function]}
      onKeyDown={[Function]}
      showIcons={true}
    >
      feature
    </EuiFilterSelectItem>
    <EuiFilterSelectItem
      key="1"
      onClick={[Function]}
      onKeyDown={[Function]}
      showIcons={true}
    >
      Text
    </EuiFilterSelectItem>
    <EuiFilterSelectItem
      key="2"
      onClick={[Function]}
      onKeyDown={[Function]}
      showIcons={true}
    >
      <div>
        bug
      </div>
    </EuiFilterSelectItem>
  </div>
</EuiPopover>
`;

exports[`FieldValueSelectionFilter render - multi-select OR 1`] = `
<EuiPopover
  anchorPosition="downCenter"
  button={
    <EuiFilterButton
      color="text"
      grow={true}
      hasActiveFilters={false}
      iconSide="right"
      iconType="arrowDown"
      onClick={[Function]}
      type="button"
    >
      Tag
    </EuiFilterButton>
  }
  closePopover={[Function]}
  display="inlineBlock"
  hasArrow={true}
  id="field_value_selection_0"
  isOpen={false}
  ownFocus={true}
  panelClassName="euiFilterGroup__popoverPanel"
  panelPaddingSize="none"
  withTitle={null}
>
  <div
    className="euiFilterSelect__note"
  >
    <div
      className="euiFilterSelect__noteContent"
    >
      <EuiLoadingChart
        size="m"
      />
      <EuiSpacer
        size="xs"
      />
      <p>
        loading...
      </p>
    </div>
  </div>
</EuiPopover>
`;

exports[`FieldValueSelectionFilter render - options as a function 1`] = `
<EuiPopover
  anchorPosition="downCenter"
  button={
    <EuiFilterButton
      color="text"
      grow={true}
      hasActiveFilters={false}
      iconSide="right"
      iconType="arrowDown"
      onClick={[Function]}
      type="button"
    >
      Tag
    </EuiFilterButton>
  }
  closePopover={[Function]}
  display="inlineBlock"
  hasArrow={true}
  id="field_value_selection_0"
  isOpen={false}
  ownFocus={true}
  panelClassName="euiFilterGroup__popoverPanel"
  panelPaddingSize="none"
  withTitle={null}
>
  <div
    className="euiFilterSelect__note"
  >
    <div
      className="euiFilterSelect__noteContent"
    >
      <EuiLoadingChart
        size="m"
      />
      <EuiSpacer
        size="xs"
      />
      <p>
        Loading...
      </p>
    </div>
  </div>
</EuiPopover>
`;

exports[`FieldValueSelectionFilter render - options as an array 1`] = `
<EuiPopover
  anchorPosition="downCenter"
  button={
    <EuiFilterButton
      color="text"
      grow={true}
      hasActiveFilters={false}
      iconSide="right"
      iconType="arrowDown"
      onClick={[Function]}
      type="button"
    >
      Tag
    </EuiFilterButton>
  }
  closePopover={[Function]}
  display="inlineBlock"
  hasArrow={true}
  id="field_value_selection_0"
  isOpen={false}
  ownFocus={true}
  panelClassName="euiFilterGroup__popoverPanel"
  panelPaddingSize="none"
  withTitle={false}
>
  <div
    className="euiFilterSelect__items"
  >
    <EuiFilterSelectItem
      key="0"
      onClick={[Function]}
      onKeyDown={[Function]}
      showIcons={true}
    >
      feature
    </EuiFilterSelectItem>
    <EuiFilterSelectItem
      key="1"
      onClick={[Function]}
      onKeyDown={[Function]}
      showIcons={true}
    >
      Text
    </EuiFilterSelectItem>
    <EuiFilterSelectItem
      key="2"
      onClick={[Function]}
      onKeyDown={[Function]}
      showIcons={true}
    >
      <div>
        bug
      </div>
    </EuiFilterSelectItem>
  </div>
</EuiPopover>
`;
